kubernetes/apps/default/miniflux/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &app miniflux
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`miniflux.${SECRET_DOMAIN}`)
      # - match: Host(`recipes.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: external-default
        # - name: basicauth
      services:
        - name: *app
          namespace: default
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
